# placeholder

./: .gitignore  startup_robot.service  zenoh.sh
base_robot_package/: CMakeLists.txt  location.md  package.xml
base_robot_package/src/arm_control_node/: CMakeLists.txt  package.xml
base_robot_package/src/arm_control_node/src/: arm_control_node.cpp
base_robot_package/src/camera_detection_node/: CMakeLists.txt  package.xml
base_robot_package/src/camera_detection_node/src/: camera_detection_node.cpp
base_robot_package/src/fleet_manager/: CMakeLists.txt  cMakeLists.txt  package.xml
base_robot_package/src/fleet_manager/src/: fleet_manager_node.cpp
base_robot_package/src/nav_goal_node/: CMakeLists.txt  package.xml
base_robot_package/src/nav_goal_node/config/: locations.yaml
base_robot_package/src/nav_goal_node/src/: nav_goal_node.cpp
base_robot_package/src/robot_status_node/: CMakeLists.txt  package.xml
base_robot_package/src/robot_status_node/src/: robot_status_node.cpp
config/controller/: location.md  logitech.config.yaml
config/robot_navigation/: navigation.yaml
config/robot_urdf/: 2wd_properties.urdf.xacro  location.md
configs/controller/: logitech.config.yaml
linorobot2_interfaces/: CMakeLists.txt  package.xml
linorobot2_interfaces/msg/: RobotStatus.msg
nav_goal_node/: CMakeLists.txt  package.xml
nav_goal_node/config/: locations.yaml
nav_goal_node/src/: nav_goal_node.cpp
robot_status_node/: package.xml
robot_status_node/src/: robot_status_node.cpp
robotarm_control/: CMakeLists.txt  package.xml
scripts/: location.md  startup_default.sh  startup_joystick.sh  startup_robot.sh  startup_slam.sh  zenoh.sh
services/: location.md  startup_joy.service  startup_robot.service  startup_slam.service  zenoh.service
wiki/: Afbeeldingen-en-diagrammen.md  Autostart-scripts.md  Branch-informatie.md  Communicatie-Interface-beschrijving.md  Communicatie-tussen-robots.md  Connecting-the-router-mesh.md  Controller-config.md  Definition-of-Fun.md  Gemaakte-keuzes.md  Hardwareschema's.md  Hardware‐integratie---micro‐ROS-servo-motor.md  Het-aanmaken-van-items(issues).md  Home.md  Ip-ranges.md  Michiel--‐‐--robot-communicatie.md  Onderzoek-liften.md  OpenCV-Vision.md  Opzetten-zenoh-bridge.md  READ-ME.md  ROS-2-Cplusplus-node-maken-en-runnen.md  ROS-Netwerkoverzicht.md  ROS2-commands-cheatsheet.md  Rapport-1-Test-1.md  Rapport-1-Test-2.md  Rapport-1-test-3.md  Robot-commands-en-inloggen-en-slam.md  Robot-nodes-slam-etc-2.0.md  Samenwerkingscontract.md  Test-1-SLAM.md  Test-2-Communicatie.md  Test-3-Goederenbak.md  Test-4-Volledige-systeemtest.md  Test-template.md  Testplan.md  URDF-aanpassen.md  Werking-van-de-robot-arm.md
