<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>fleet_manager</name>
  <version>0.0.0</version>
  <description>Central fleet manager for coordinating multiple robots</description>

  <maintainer email="rens@todo.todo">rens</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime & build dependencies -->
  <depend>rclcpp</depend>

  <!-- Testing (optional, default ROS) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
